@@ -38,6 +38,7 @@ constants.class_to_font_glyph = {
   crafter = "D",
   fluid = "B",
   item = "C",
+  offshore_pump = "D",
   recipe = "E",
   resource = "F",
   technology = "A"
@@ -70,6 +71,7 @@ constants.empty_translations_table = {
   gui = {},
   crafter = {},
   material = {},
+  offshore_pump = {},
   recipe = {},
   resource = {},
   technology = {}
