@@ -60,10 +60,13 @@ made-in=Made in (__1__)
 material-lowercase=material
 material=Material
 mined-from=Mined from (__1__)
+offshore-pump=Offshore pump
 open-quick-reference=Open quick reference panel
+per-second= / s
 product-of=Product of (__1__)
 products=Products (__1__)
 pumped-by=Pumped by (__1__)
+pumping-speed=Pumping speed:
 recipe-categories-tooltip=Uncheck a recipe category to hide it from both search and information pages.
 recipe-categories=Recipe categories [img=info]
 recipe-lowercase=recipe
