@@ -10,7 +10,7 @@ function material_page.build()
     build_list_box({"rb-gui.mined-from"}, 1, "material.mined_from"),
     build_list_box({"rb-gui.rocket-launch-payloads"}, 1, "material.rocket_launch_payloads"),
     build_list_box({"rb-gui.rocket-launch-products"}, 1, "material.rocket_launch_products"),
-    -- build_list_box({"rb-gui.pumped-by"}, 1, "material.pumped_by"),
+    build_list_box({"rb-gui.pumped-by"}, 1, "material.pumped_by"),
     build_list_box({"rb-gui.unlocked-by"}, 1, "material.unlocked_by")
   }
 end
@@ -24,6 +24,7 @@ function material_page.update(int_name, gui_data, player_data)
   update_list_box(obj_data.product_of, "recipe", gui_data.material.product_of, player_data)
   update_list_box(obj_data.rocket_launch_payloads, "material", gui_data.material.rocket_launch_payloads, player_data)
   update_list_box(obj_data.rocket_launch_products, "material", gui_data.material.rocket_launch_products, player_data)
+  update_list_box(obj_data.pumped_by, "offshore_pump", gui_data.material.pumped_by, player_data)
   update_list_box(obj_data.mined_from, "resource", gui_data.material.mined_from, player_data)
   update_list_box(obj_data.unlocked_by, "technology", gui_data.material.unlocked_by, player_data)
 end
